--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -31,7 +31,7 @@ body, button, input, textarea{
 }
 .content{
   background-color: var(--background);
-  width: 60vw;
+  max-width: 75vw;
   min-height: 80vh;
 }
 input, button, .button{
